==> MikroElektronika/mikrosdk_v2/targets/pic_16bit/mikroe/dspic/src/adc/implementation_1/hal_ll_adc.c <==
#include "hal_ll_adc.h"
#include "hal_ll_gpio.h"
#include "hal_ll_analog_in_map.h"
#define HAL_LL_FULL_VREF_EXTERNAL
#define hal_ll_adc_get_module_state_address ((hal_ll_adc_handle_register_t *)*handle)
#define hal_ll_adc_get_handle (hal_ll_adc_handle_register_t *)hal_ll_adc_get_module_state_address->hal_ll_adc_handle
#define hal_ll_adc_get_base_struct(_handle) ((hal_ll_adc_base_handle_t *)_handle)
#define hal_ll_adc_get_base_from_hal_handle ((hal_ll_adc_hw_specifics_map_t *)((hal_ll_adc_handle_register_t *)\
                                            (((hal_ll_adc_handle_register_t *)(handle))->hal_ll_adc_handle))->hal_ll_adc_handle)->base
#define hal_ll_adc_module_num(_module_num) (_module_num - 1)
#define HAL_LL_MODULE_ADC_1 1
#define HAL_LL_MODULE_ADC_2 2
#define HAL_LL_ADC_CONVERSION_CLOCK            0x1F3F
#define HAL_LL_ADC_START_CONVERSION_BIT        0x0001
#define HAL_LL_ADC_TURN_ON_BIT                 0x000F
#define HAL_LL_ADC_GO_DONE_BIT                 0x0000
#define HAL_LL_ADC_RESOLUTION_BIT              0x000A
#define HAL_LL_ADC_START_CONVERSION_MASK       0x00E0
#define HAL_LL_VREF_EXTERNAL_MASK              0x6000
#define HAL_LL_VREF_MINUS_EXTERNAL_MASK        0x4000
#define HAL_LL_VREF_PLUS_EXTERNAL_MASK         0x2000

hal_ll_err_t hal_ll_adc_register_handle( hal_ll_pin_name_t pin, hal_ll_adc_voltage_reference_t vref_input, hal_ll_adc_resolution_t resolution, hal_ll_adc_handle_register_t *handle_map, uint8_t *hal_module_id )
{
    uint8_t pin_check_result;
    hal_ll_adc_pin_id index;

    if ( HAL_LL_PIN_NC == ( pin_check_result = hal_ll_adc_check_pin( pin, &index, handle_map ) ) ) {
        return HAL_LL_ADC_WRONG_PIN;
    };

    switch ( resolution )
    {
        case HAL_LL_ADC_RESOLUTION_10_BIT:
            hal_ll_adc_hw_specifics_map[pin_check_result].resolution = HAL_LL_ADC_RESOLUTION_10_BIT;
            break;
        case HAL_LL_ADC_RESOLUTION_12_BIT:
            hal_ll_adc_hw_specifics_map[pin_check_result].resolution = HAL_LL_ADC_RESOLUTION_12_BIT;
            break;

        default:
            return HAL_LL_ADC_UNSUPPORTED_RESOLUTION;
    }

    switch ( vref_input )
    {
        case HAL_LL_ADC_VREF_INTERNAL:
            hal_ll_adc_hw_specifics_map[pin_check_result].vref_input = HAL_LL_ADC_VREF_INTERNAL;
            break;
        case HAL_LL_ADC_VREF_EXTERNAL:
            hal_ll_adc_hw_specifics_map[pin_check_result].vref_input = HAL_LL_ADC_VREF_EXTERNAL;
            break;

        default:
            return HAL_LL_ADC_UNSUPPORTED_VREF;
    }

    if ( hal_ll_adc_hw_specifics_map[pin_check_result].pin != pin )
    {
        hal_ll_adc_map_pin( pin_check_result, &index );

        handle_map[pin_check_result].init_ll_state = false;
    }

    *hal_module_id = pin_check_result;

    hal_ll_module_state[pin_check_result].hal_ll_adc_handle = ( handle_t *)&hal_ll_adc_hw_specifics_map[pin_check_result].base;

    handle_map[pin_check_result].hal_ll_adc_handle = ( handle_t *)&hal_ll_module_state[pin_check_result].hal_ll_adc_handle;

    return HAL_LL_ADC_SUCCESS;
}

hal_ll_err_t hal_ll_adc_set_resolution( handle_t *handle, hal_ll_adc_resolution_t resolution )
{
    low_level_handle = hal_ll_adc_get_handle;

    hal_ll_adc_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_adc_get_module_state_address );

    low_level_handle->init_ll_state = false;

    switch ( resolution ) {
        #ifdef SUPPORTED_ADC_RES_10_BIT
        case HAL_LL_ADC_RESOLUTION_10_BIT:
            hal_ll_adc_hw_specifics_map_local->resolution = HAL_LL_ADC_RESOLUTION_10_BIT;
            break;
        #endif
        #ifdef SUPPORTED_ADC_RES_12_BIT
        case HAL_LL_ADC_RESOLUTION_12_BIT:
            hal_ll_adc_hw_specifics_map_local->resolution = HAL_LL_ADC_RESOLUTION_12_BIT;
            break;
        #endif

        default:
            return HAL_LL_ADC_UNSUPPORTED_RESOLUTION;
    }

    hal_ll_adc_init( hal_ll_adc_hw_specifics_map_local );

    low_level_handle->init_ll_state = true;

    return HAL_LL_ADC_SUCCESS;
}

hal_ll_err_t hal_ll_adc_read( handle_t *handle, uint16_t *readDatabuf )
{
    hal_ll_adc_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_adc_get_module_state_address );

    hal_ll_adc_base_handle_t *reg_addr = hal_ll_adc_get_base_struct( hal_ll_adc_hw_specifics_map_local->base );

    hal_ll_gpio_port_analog_input( ( hal_ll_gpio_base_t )hal_ll_gpio_port_base_map( ( hal_ll_adc_hw_specifics_map_local->pin & HAL_LL_NIBBLE_HIGH_8BIT ) >> 4 ),
                                                                                      hal_ll_adc_hw_specifics_map_local->pin );

    write_reg( &reg_addr->chs0, hal_ll_adc_hw_specifics_map_local->channel );

    set_reg_bit( &reg_addr->con1, HAL_LL_ADC_START_CONVERSION_BIT );

    while ( !check_reg_bit( &reg_addr->con1, HAL_LL_ADC_GO_DONE_BIT ) );

    clear_reg_bit( &reg_addr->con1, HAL_LL_ADC_GO_DONE_BIT );

    *readDatabuf = read_reg( &reg_addr->buf0 );

    return HAL_LL_ADC_SUCCESS;
}

static void _hal_ll_adc_hw_init( hal_ll_adc_hw_specifics_map_t *map )
{
    hal_ll_adc_base_handle_t *reg_addr = hal_ll_adc_get_base_struct( map->base );

    write_reg( &reg_addr->con1, ((31 == OFFSET) | (25 == OFFSET)) ? (HAL_LL_ADC_START_CONVERSION_MASK >> 1) : (HAL_LL_ADC_START_CONVERSION_MASK ) );

    clear_reg( &reg_addr->con2 );

    if ( HAL_LL_ADC_RESOLUTION_12_BIT == map->resolution ) {
        set_reg_bit( &reg_addr->con1, HAL_LL_ADC_RESOLUTION_BIT );
    }

    if ( HAL_LL_ADC_VREF_INTERNAL != map->vref_input ) {
        #ifdef HAL_LL_FULL_VREF_EXTERNAL
        set_reg_bits( &reg_addr->con2, HAL_LL_VREF_EXTERNAL_MASK );
        #elif defined HAL_LL_NEG_VREF_EXTERNAL
        set_reg_bits( &reg_addr->con2, HAL_LL_VREF_MINUS_EXTERNAL_MASK );
        #elif defined HAL_LL_POS_VREF_EXTERNAL
        set_reg_bits( &reg_addr->con2, HAL_LL_VREF_PLUS_EXTERNAL_MASK );
        #endif
    }

    write_reg( &reg_addr->con3, HAL_LL_ADC_CONVERSION_CLOCK );
    /**
    * @brief  Initialize two registers for dsPIC33FJ and PIC24HJ MCUs.
    * ADxCON4 allocates 1 word of buffer to each analog input,
    * ADxCSSH as an addition to ADxCSSL helps to skip input scan.
    */
    #ifdef MORE_REGS
    clear_reg( &reg_addr->con4 );
    clear_reg( &reg_addr->cssh );
    #endif

    clear_reg( &reg_addr->cssl );

    set_reg_bit( &reg_addr->con1, HAL_LL_ADC_TURN_ON_BIT );

    set_reg_bits( &reg_addr->chs0, map->channel );
    set_reg_bits( &reg_addr->chs0, map->channel << 8 );
}

static void hal_ll_adc_init( hal_ll_adc_hw_specifics_map_t *map ) {

    hal_ll_gpio_port_analog_input( ( hal_ll_gpio_base_t )hal_ll_gpio_port_base_map( ( map->pin & HAL_LL_NIBBLE_HIGH_8BIT ) >> 4 ), map->pin );

    _hal_ll_adc_hw_init( map );

}
